# cmake-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CMakeLists.txt  Directory.cmake  SourceGroup.cmake
module/: CMakeLists.txt
module/helloworld/: CMakeLists.txt  ParentClass.h  main.cpp
module/helloworld/subdir/: ChildClass.cpp  ChildClass.h
module/sample_excutable/: CMakeLists.txt  ParentClass.cpp  main.cpp
module/sample_excutable/subdir/: CMakeLists.txt
module/sample_library/: CMakeLists.txt  Config.h.template
module/sample_library/include/: CMakeLists.txt
module/sample_library/include/sample_library/: CMakeLists.txt  Config.h  SampleLibrary.h  TestClass.h
module/sample_library/src/: CMakeLists.txt  TestClass.cpp
