# Module 'sample_excutable'

set(VAR_MODULE_NAME "sample_excutable")

set(VAR_MODULE_SOURCES)
FUNC_GET_SUBDIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} SUBDIRS)
foreach(SUBDIR ${SUBDIRS})
    add_subdirectory(${SUBDIR})
endforeach()

file(GLOB SOURCES_IN_CURRENT_DIR "${CMAKE_CURRENT_LIST_DIR}/*.h" "${CMAKE_CURRENT_LIST_DIR}/*.hpp" "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
set(VAR_MODULE_SOURCES ${VAR_MODULE_SOURCES} ${SOURCES_IN_CURRENT_DIR})

FUNC_GROUP_SOURCE("${VAR_MODULE_SOURCES}" "${CMAKE_CURRENT_LIST_DIR}")

add_executable(${VAR_MODULE_NAME} ${VAR_MODULE_SOURCES})
set_target_properties( ${VAR_MODULE_NAME} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/${VAR_DIR_NAME_OUTPUT}/$<CONFIG>"
    LINKER_LANGUAGE CXX
    CXX_STANDARD 14
    FOLDER Modules
)

set_property(DIRECTORY ${CMAKE_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${VAR_MODULE_NAME})
